Scala hello world

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "FSharp.inlayHints.typeAnnotations": false,
-    "editor.inlayHints.enabled": "offUnlessPressed"
+    "editor.inlayHints.enabled": "offUnlessPressed",
+    "files.watcherExclude": {
+        "**/target": true
+    }
 }
